<resources>
    <string name="app_name">HocSharePreferenceSetting</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Tổng quan</string>

    <string name="pref_title_social_recommendations">Bật đề xuất xã hội</string>
    <string name="pref_description_social_recommendations">Đề nghị mọi người liên hệ dựa trên lịch sử tin nhắn của bạn</string>

    <string name="pref_title_display_name">Tên hiển thị</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Thêm bạn bè vào tin nhắn</string>
    <string-array name="pref_example_list_titles">
        <item>Luôn luôn</item>
        <item>Khi có thể</item>
        <item>Không bao giờ</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Dữ liệu &amp; đồng bộ hóa</string>

    <string name="pref_title_sync_frequency">Tần số đồng bộ</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">Cài đặt đồng bộ hóa hệ thống</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Thông báo</string>

    <string name="pref_title_new_message_notifications">Thông báo tin nhắn mới</string>

    <string name="pref_title_ringtone">Nhạc chuông</string>
    <string name="pref_ringtone_silent">Im lặng</string>

    <string name="pref_title_vibrate">Rung</string>
</resources>
