<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />

    <!-- NOTE: EditTextPreference chấp nhận thuộc tính EditText. -->
    <!-- NOTE: Tóm tắt của EditTextPreference phải được
    đặt thành giá trị của nó theo mã hoạt động. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <!-- LƯU Ý: Ẩn các nút để đơn giản hóa giao diện người dùng.
    Người dùng có thể chạm vào bên ngoài hộp thoại để gạt bỏ nó. -->
    <!-- LƯU Ý: Tóm tắt của ListPreference phải
    được đặt thành giá trị của nó theo mã hoạt động. -->
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />

</PreferenceScreen>
