<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Các tiêu đề cài đặt này chỉ được sử dụng trên máy tính bảng. -->

    <header
        android:fragment="com.example.hocsharepreferencesetting.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.example.hocsharepreferencesetting.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.example.hocsharepreferencesetting.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />

</preference-headers>
